syntax = "proto3";

package balancerpb;

import "modules/balancer/agent/balancerpb/module.proto";

option go_package = "github.com/yanet-platform/yanet2/modules/"
		    "balancer/agent/balancerpb;balancerpb";

// Real server in graph topology.
//
// Represents a real server's current state within the balancer's
// virtual service topology, including its weight and enabled status.
message GraphReal {
	// Real server identifier (relative to its virtual service)
	RelativeRealIdentifier identifier = 1;

	// Original configured weight of the real server.
	//
	// This is the static weight value from the configuration that was
	// set via UpdateConfig or UpdateReals. It remains constant unless
	// explicitly changed through configuration updates.
	//
	// This weight is used as the baseline for WLC calculations when
	// the WLC flag is enabled for the virtual service.
	uint32 weight = 2;

	// Current effective weight after WLC adjustments.
	//
	// When WLC (Weighted Least Connection) is enabled for the virtual
	// service, this field shows the dynamically adjusted weight based
	// on current session distribution. The WLC algorithm adjusts weights
	// to balance load across real servers according to their active
	// session counts.
	//
	// Formula:
	//   effective_weight = weight * max(1.0, power * (1.0 -
	//   connectionsRatio))
	//   where:
	//   - weight: Original configured weight (field above)
	//   - power: WLC power factor from StateConfig.wlc.power
	//   - connectionsRatio:
	//     (real_sessions * total_weight) / (total_sessions *
	//     real_weight)
	//
	// When WLC is disabled, effective_weight equals weight.
	//
	// The effective_weight is capped at StateConfig.wlc.max_weight.
	uint32 effective_weight = 3;

	// Whether the real server is currently enabled.
	//
	// When false, the real receives no new sessions but existing
	// sessions may continue to be forwarded to it.
	bool enabled = 4;
}

// Virtual service in graph topology.
//
// Represents a virtual service and all its associated real servers
// with their current states.
message GraphVs {
	// Virtual service identifier
	VsIdentifier identifier = 1;

	// List of real servers backing this virtual service.
	//
	// Includes current weight and enabled status for each real.
	repeated GraphReal reals = 2;
}

// Complete balancer topology graph.
//
// Provides a snapshot of the entire balancer configuration showing
// the relationships between virtual services and their real servers,
// along with current operational state (weights, enabled status).
//
// This is useful for:
// - Visualizing the load balancer topology
// - Monitoring real server states
// - Debugging configuration issues
// - Understanding traffic distribution
message Graph {
	// List of all virtual services with their real servers
	repeated GraphVs virtual_services = 1;
}